package com.ouday.memo.core.util

object TestTags {
    const val FILTER = "FILTER"
    const val TEXT_FIELD_TITLE = "TEXT_FIELD_TITLE"
    const val TEXT_FIELD_CONTENT = "TEXT_FIELD_CONTENT"
    const val ROW_ITEM = "ROW_ITEM"
}