...
        modifier = modifier
    ) {
        Row(
            modifier = Modifier.fillMaxWidth()
        ) {
            DefaultRadioButton(
                text = "Title",
                selected = memoOrder is MemoOrder.Title,
                onSelect = { onOrderChange(MemoOrder.Title(memoOrder.orderType)) }
            )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Date",
...
                onSelect = {
                    onOrderChange(memoOrder.copy(OrderType.Ascending))
                }
            )
            Spacer(modifier = Modifier.width(8.dp))
            DefaultRadioButton(
                text = "Descending",
                selected = memoOrder.orderType is OrderType.Descending,
                onSelect = {
                    onOrderChange(memoOrder.copy(OrderType.Descending))
                }
            )
        }
...
