...
            FloatingActionButton(
                onClick = {
                    event(AddEditMemoEvent.SaveMemo)
                },
                backgroundColor = Color(state.memoColor)
            ) {
                Icon(imageVector = Icons.Default.Save, contentDescription = "Save")
            }
        },
        scaffoldState = scaffoldState
    ) {
        Column(
            modifier = Modifier
...
